---------------------------------------------------------------------------------------------------
Version: 4.1.9
Date: 2021.02.11
  Info:
    - Added omni.matter.add_ignore_resource(name) and omni.matter.remove_ignore_resource(name)
    - Mods can access those to have control over what gets (not) ignored by our autoplace removal
---------------------------------------------------------------------------------------------------
Version: 4.1.8
Date: 2021.01.21
  Info:
    - Moved the following functions/ tables into omnimatters namespace
    - (from omni.fname to omni.matter.fname) :
    - omnisource, omnitial, omnifluid, add_resource(), remove_resource(), add_fluid(),
    - remove_fluid(), get_ore_tier(), set_ore_tier(), add_initial(), add_omniwater_extraction()
  Bugfixes:
    - Fixed that omnitiles used the stone path transitions
    - Complete rewrite of omnite´s autoplace control
    - Fixes infinite omnite spawing in the starting area
    - Fixes map gen presets not affecting omnite generator settings
    - Fixes infinite omnite patches not spawning in the middle of normal omnite patches
---------------------------------------------------------------------------------------------------
Version: 4.1.7
Date: 2021.01.08
  Bugfixes:
    - Fixed that the output of electric offshore pumps of some mods like K2 was not
    -   - changed to omnic water
---------------------------------------------------------------------------------------------------
Version: 4.1.6
Date: 2021.01.03
  Changes:
    - Changed the omnicium gear wheel normal difficulty recipe from 2i n-->2 out to 1 in-->1 out
  Bugfixes:
    - Fixed that stone loot was not replaced on all rocks with omnite
    - Fixed that water omnitraction tech cost was pretty low
    - Fixed that the last two levels of extraction techs got cheaper
---------------------------------------------------------------------------------------------------
Version: 4.1.5
Date: 2020.12.27
  Changes: