@@ -20,12 +20,3 @@ require("prototypes.buildings.omnifurnace")
 require("prototypes.recipes.omnicium")
 require("prototypes.recipes.omnibrick")
 require("prototypes.recipes.omnic-acid")
-
-
-if mods["angelsindustries"] and settings.startup["angels-enable-tech"].value then
-	--add exceptions for tech
-	angelsmods.functions.add_exception("omnitech-focused-extraction-angels-ore3-2")
-	angelsmods.functions.add_exception("omnitech-focused-extraction-angels-ore3-1")
-	angelsmods.functions.add_exception("omnitech-focused-extraction-angels-ore1-2")
-	angelsmods.functions.add_exception("omnitech-focused-extraction-angels-ore1-1")
-end
