@@ -4,6 +4,9 @@ Date: 2021.02.11
   Info:
     - Added omni.matter.add_ignore_resource(name) and omni.matter.remove_ignore_resource(name)
     - Mods can access those to have control over what gets (not) ignored by our autoplace removal
+  Changes:
+    - Angels industries tech overhaul setting is now hidden and forced to false
+    - Various settings related to ore spawning that have no functionality with omni are now hidden
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.8
 Date: 2021.01.21
